Fixed Sponsers&ContactUs page format
Fixed the format for the Sponsers&ContactUs page so it wouldn't show the white bars when width is less than 500px. Also, I Resized the form box so it wouldn't cut off when reaching 500px or less.

--- a/src/pages/SponsorUs/styles.scss
+++ b/src/pages/SponsorUs/styles.scss
@@ -7,10 +7,7 @@
     @media only screen and (max-width: 900px), only screen and (max-height: 640px) {
         margin: 0 auto;
     }
-    @media (max-width: 500px) {
-        width: 90%;
-    }
-
+    
     &__content {
         &__heading {
             font-size: 1.875rem;
